examples/typescript-error.txt
src/index.ts:42:5 - error TS2322: Type 'string' is not assignable to type 'number'.

42     const count: number = "hello";
       ~~~~~

src/utils.ts:15:10 - error TS2339: Property 'foo' does not exist on type '{ bar: string; }'.

15     obj.foo();
            ~~~


Found 2 errors in 2 files.
